Poprawione rozwiązania Lab 1 + Rozwiązania Lab 2